--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.4.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
