--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@minupalaniappan/brise": "^0.1.0",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
