[調整]_嘗試解決 CROS 問題

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   ],
   "headers": [
     {
-      "source": "/newsapi.org/(.*)",
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
