[調整]_嘗試解決 CROS 問題

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   ],
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/newsapi.org/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "*" }
       ]
