--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,8 @@
       "destination": "/index.html"
     },
     {
-      "source": "/api/:path*",
-      "destination": "https://newsapi.org/:path*",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD"],
-      "headers": {
-        "Authorization": "Bearer 06039f9f95e94a01a9f3871f0eb46700"
-      }
+      "source": "/api/:path(.*)",
+      "destination": "https://newsapi.org/:path"
     }
   ]
 }
