[調整]_vercel.json 嘗試解決 vite proxy 失效問題

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/api/(.*)",
+      "destination": "https://newsapi.org/$1"
     },
     {
-      "source": "/api/:path(.*)",
-      "destination": "https://newsapi.org/:path"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
