[調整]_vercel.json 設定 bearer token

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://newsapi.org/$1"
+      "destination": "https://newsapi.org/$1",
+      "headers": {
+        "Authorization": "Bearer 06039f9f95e94a01a9f3871f0eb46700"
+      }
     },
     {
       "source": "/(.*)",
