--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,12 @@
     {
       "source": "/api/(.*)",
       "destination": "https://newsapi.org/$1",
-      "headers": {
-        "Authorization": "Bearer 06039f9f95e94a01a9f3871f0eb46700"
-      }
+      "headers": [
+        {
+          "key": "Authorization",
+          "value": "Bearer 06039f9f95e94a01a9f3871f0eb46700"
+        }
+      ]
     },
     {
       "source": "/(.*)",
