--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://newsapi.org/$1",
-      "headers": [
-        {
-          "key": "Authorization",
-          "value": "Bearer 06039f9f95e94a01a9f3871f0eb46700"
-        }
-      ]
+      "destination": "https://newsapi.org/$1"
     },
     {
       "source": "/(.*)",
